--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,16 @@ DB_HOST=
 DB_USER=
 DB_PASS=
 DB_NAME=
+
+APP_URL=
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_PASSWORD=
+
+SMTP_FROM_EMAIL=
+SMTP_FROM_NAME=
+SMTP_SECURE=
+
+SMTP_DEBUG=
